import links on the head

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seja Bem-Vindo</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/fontawesome.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <script type="text/javascript" src="./js/jquery-1.12.4.min.js" defer></script>
+    <script type="text/javascript" src="./js/modernizr-3.5.0.min.js" defer></script>
+    <script type="text/javascript" src="./js/bootstrap.min.js" defer></script>
+    <script type="text/javascript" src="./js/popper.min.js" defer></script>
+    <title>Seja - Bem-Vindo!</title>
 </head>
 
 <body>
