--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 <body>
 
     <section class="header">
-
+        <div class="container">
+            <nav class="navbar navbar-expand-lg px-0">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/logo.png" width="160" class="img-logo"/>
+                </a>
+            </nav>
+        </div>
     </section>
 
     <section class="banner">
@@ -41,7 +47,7 @@
     </section>
 
     <footer>
-        
+
     </footer>
 
 </body>
