setting the header navegation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
                 <a class="navbar-brand" href="#">
                     <img src="./img/logo.png" width="160" class="img-logo"/>
                 </a>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropDown">
+                    <span class="navbar-toggler-icon">
+                        <i class="fas fa-bars"></i>
+                    </span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNavDropDown">
+                    <ul class="navbar-nav ml-auto mr-auto">
+                        <li class="nav-item"> <a href="#reservas" class="nav-link">Reserva</a></li>
+                        <li class="nav-item"> <a href="#servicos" class="nav-link">Serviços</a></li>
+                        <li class="nav-item"> <a href="#cardapio" class="nav-link">Cardápios</a></li>
+                        <li class="nav-item"> <a href="#depoimentos" class="nav-link">Depoimentos</a></li>
+                    </ul>
+                </div>
+
             </nav>
         </div>
     </section>
@@ -30,19 +46,19 @@
 
     </section>
 
-    <section class="services">
+    <section class="services" id="servicos">
 
     </section>
 
-    <section class="menu">
+    <section class="menu" id="cardapio">
 
     </section>
 
-    <section class="depositions">
+    <section class="depositions" id="depoimentos">
 
     </section>
 
-    <section class="reserve">
+    <section class="reserve" id="reservas">
 
     </section>
 
