--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
                 <div class="collapse navbar-collapse" id="navbarNavDropDown">
                     <ul class="navbar-nav ml-auto mr-auto">
-                        <li class="nav-item"> <a href="#reservas" class="nav-link">Reserva</a></li>
-                        <li class="nav-item"> <a href="#servicos" class="nav-link">Serviços</a></li>
-                        <li class="nav-item"> <a href="#cardapio" class="nav-link">Cardápios</a></li>
-                        <li class="nav-item"> <a href="#depoimentos" class="nav-link">Depoimentos</a></li>
+                        <li class="nav-item"> <a href="#reservas" class="nav-link"><b>Reserva</b></a></li>
+                        <li class="nav-item"> <a href="#servicos" class="nav-link"><b>Serviços</b></a></li>
+                        <li class="nav-item"> <a href="#cardapio" class="nav-link"><b>Cardápios</b></a></li>
+                        <li class="nav-item"> <a href="#depoimentos" class="nav-link"><b>Depoimentos</b></a></li>
                     </ul>
                 </div>
 
