--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
                         <li class="nav-item"> <a href="#depoimentos" class="nav-link"><b>Depoimentos</b></a></li>
                     </ul>
                 </div>
-
+                <a class="btn btn-white btn-icon">
+                    Meu carrinho <span class="icon">
+                        <i class="fa fa-shopping-bag"></i>
+                    </span>
+                </a>
             </nav>
         </div>
     </section>
