start the banner

--- a/index.html
+++ b/index.html
@@ -47,7 +47,22 @@
     </section>
 
     <section class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="d-flex text-banner">
+                        <h1>
+                            Escolha sua comida favorita.
+                        </h1>
+                        <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e segura.</p>
+                    </div>
+                </div>
 
+                <div class="col-6">
+                    
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="services" id="servicos">
