--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="col-6">
                     <div class="d-flex text-banner">
                         <h1>
-                            Escolha sua comida favorita.
+                            <b>Escolha sua comida <b class="color-primary">favorita.</b></b>
                         </h1>
                         <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e segura.</p>
                     </div>
