new link on banner

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                             <b>Escolha sua comida <b class="color-primary">favorita.</b></b>
                         </h1>
                         <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e segura.</p>
+
+                        <div>
+                            <a class="btn btn-yellow mt-4 mr-3">
+                                Ver cardápio
+                            </a>
+                        </div>
+
                     </div>
                 </div>
 
