Create another link

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                             <a class="btn btn-yellow mt-4 mr-3">
                                 Ver cardápio
                             </a>
+
+                            <a href="#" class="btn btn-white btn-icon-left mt-4">
+                                (11) 99000-6002
+                            </a>
                         </div>
 
                     </div>
