--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                             </a>
 
                             <a href="#" class="btn btn-white btn-icon-left mt-4">
+                                <span class="icon-left">
+                                    <i class="fa fa-phone"></i>
+                                </span>
                                 (11) 99000-6002
                             </a>
                         </div>
