--- a/index.html
+++ b/index.html
@@ -68,8 +68,18 @@
                                 (11) 99000-6002
                             </a>
                         </div>
-
                     </div>
+                    <a class="btn btn-sm btn-white btn-social mt4 mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+
+                    <a class="btn btn-sm btn-white btn-social mt4 mr-3">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+
+                    <a class="btn btn-sm btn-white btn-social mt4">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
                 </div>
 
                 <div class="col-6">
