create img the other side

--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
                 </div>
 
                 <div class="col-6">
+                    <div class="card-banner">
+                        <div class="d-flex img-banner">
+                            <img src="./img/burguer.png" alt="Image of burguer">
+                        </div>
+                    </div>
+
                     
+
                 </div>
             </div>
         </div>
