--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg px-0">
                 <a class="navbar-brand" href="#">
-                    <img src="./img/logo.png" width="160" class="img-logo"/>
+                    <img src="./img/logo.png" width="160" class="img-logo" />
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropDown">
@@ -54,7 +54,8 @@
                         <h1>
                             <b>Escolha sua comida <b class="color-primary">favorita.</b></b>
                         </h1>
-                        <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e segura.</p>
+                        <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e
+                            segura.</p>
 
                         <div>
                             <a class="btn btn-yellow mt-4 mr-3">
@@ -89,7 +90,14 @@
                         </div>
                     </div>
 
-                    
+                    <div class="card card-case">
+                        "Entrega rápida e funcionários simpáticos.
+                        <br>A comida chegou quente e <br>
+                        muito saborasa!"
+                        <span class="card-case-name">
+                            <b>Vinicius Estevo</b>
+                        </span>
+                    </div>
 
                 </div>
             </div>
