add classes to services

--- a/index.html
+++ b/index.html
@@ -97,7 +97,32 @@
     </section>
 
     <section class="services" id="servicos">
+        <div class="conteiner">
+            <div class="row">
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title">
+                        <b>Serviços</b>
+                        <h1 class="title">
+                            <b>
+                                Como são nossos servicos?
+                            </b>
+                        </h1>
+                    </span>
+                </div>
 
+                <div class="col-4">
+
+                </div>
+
+                <div class="col-4">
+
+                </div>
+
+                <div class="col-4">
+
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="menu" id="cardapio">
