insert the card order

--- a/index.html
+++ b/index.html
@@ -111,7 +111,17 @@
                 </div>
 
                 <div class="col-4">
-
+                    <div class="card-icon text-center">
+                        <img src="img/icone-pedido.svg" alt="Icon of order">
+                    </div>
+                    <div class="card-text">
+                        <p>
+                            <b>Fácil de pedir.</b>
+                            <span>
+                                Você só precisa de alguns passos para pedir sua comida.
+                            </span>
+                        </p>
+                    </div>
                 </div>
 
                 <div class="col-4">
