--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg px-0">
                 <a class="navbar-brand" href="#">
-                    <img src="./img/logo.png" width="160" class="img-logo"/>
+                    <img src="./img/logo.png" width="160" class="img-logo" />
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropDown">
@@ -54,7 +54,8 @@
                         <h1>
                             <b>Escolha sua comida <b class="color-primary">favorita.</b></b>
                         </h1>
-                        <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e segura.</p>
+                        <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e
+                            segura.</p>
 
                         <div>
                             <a class="btn btn-yellow mt-4 mr-3">
@@ -89,7 +90,14 @@
                         </div>
                     </div>
 
-                    
+                    <div class="card card-case">
+                        "Entrega rápida e funcionários simpáticos.
+                        <br>A comida chegou quente e <br>
+                        muito saborasa!"
+                        <span class="card-case-name">
+                            <b>Vinicius Estevo</b>
+                        </span>
+                    </div>
 
                 </div>
             </div>
@@ -105,27 +113,23 @@
         <div class="conteiner">
             <div class="row">
                 <div class="col-12 text-center mb-5">
-                    <span class="hint-title">
-                        <b>Serviços</b>
+                    <span class="hint-title"><b>Serviços</b></span>
                         <h1 class="title">
                             <b>
                                 Como são nossos servicos?
                             </b>
                         </h1>
-                    </span>
                 </div>
 
                 <div class="col-4 mb-5">
                     <div class="card-icon text-center">
-                        <img src="img/icone-pedido.svg" alt="Icon of order" width="150">
+                        <img src="img/icone-pedido.svg" alt="Icon of order" width="150"/>
                     </div>
                     <div class="card-text text-center mt-3">
-                        <p>
-                            <b>Fácil de pedir</b>
+                        <p><b>Fácil de pedir</b></p>
                             <span>
                                 Você só precisa de alguns passos para pedir sua comida.
                             </span>
-                        </p>
                     </div>
                 </div>
 
@@ -134,12 +138,10 @@
                         <img src="img/icone-delivery.svg" alt="Icon of icone-delivery" width="250">
                     </div>
                     <div class="card-text text-center mt-3">
-                        <p>
-                            <b>Entrega rápida</b>
+                        <p><b>Entrega rápida</b> </p>
                             <span>
                                 Nossa entrega é sempre pontual, rápida e segura.
                             </span>
-                        </p>
                     </div>
                 </div>
 
@@ -148,12 +150,10 @@
                         <img src="img/icone-qualidade.svg" alt="Icon of icone-quality" width="250">
                     </div>
                     <div class="card-text text-center mt-3">
-                        <p>
-                            <b>Melhor qualidade</b>
+                        <p><b>Melhor qualidade</b></p>
                             <span>
                                 Não só a rapidez na entrga, a qualidad também é o nosso forte.
                             </span>
-                        </p>
                     </div>
                 </div>
             </div>
