--- a/index.html
+++ b/index.html
@@ -169,7 +169,18 @@
     </section>
 
     <section class="menu" id="cardapio">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title"><b>Cardápio</b></span>
+                    <h1 class="title">
+                        <b>
+                            Conhece o nosso cardápio
+                        </b>
+                    </h1>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="depositions" id="depoimentos">
