--- a/index.html
+++ b/index.html
@@ -179,6 +179,33 @@
                         </b>
                     </h1>
                 </div>
+                
+                <div class="col-12 container-menu">
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-hamburger"></i>&nbsp; Burguers
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-pizza-slice"></i>&nbsp; Pizza
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-bacon"></i>&nbsp; Steakes
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-cocktail"></i>&nbsp; Bebidas
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
+                    </a>
+                </div>
+
             </div>
         </div>
     </section>
