--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
     </section>
 
     <section class="menu" id="cardapio">
+
+        <div class="background-menu">
+
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center mb-5">
@@ -209,7 +212,7 @@
                 <div class="col-12">
                     <div class="row" id="menuItens">
 
-                        <div class="col-3">
+                        <div class="col-3 mb-5">
                             <div class="card card-item">
                                 <div class="img-product">
                                     <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
@@ -219,19 +222,108 @@
                                     <b>Nome</b>
                                 </p>
 
-                                <p class="price-produto">
+                                <p class="price-product text-center">
                                     <b>
                                         R$ 154,90
                                     </b>
                                 </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-product">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
+                                </div>
+
+                                <p class="title-product text-center mt-4">
+                                    <b>Nome</b>
+                                </p>
+
+                                <p class="price-product text-center">
+                                    <b>
+                                        R$ 154,90
+                                    </b>
+                                </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-product">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
+                                </div>
+
+                                <p class="title-product text-center mt-4">
+                                    <b>Nome</b>
+                                </p>
+
+                                <p class="price-product text-center">
+                                    <b>
+                                        R$ 154,90
+                                    </b>
+                                </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-product">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
+                                </div>
+
+                                <p class="title-product text-center mt-4">
+                                    <b>Nome</b>
+                                </p>
+
+                                <p class="price-product text-center">
+                                    <b>
+                                        R$ 154,90
+                                    </b>
+                                </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
                             </div>
                         </div>
 
                     </div>
                 </div>
 
+                <div class="col-12 text-center">
+                    <a class="btn btn-white btn-sm">
+                        Ver mais
+                    </a>
+                </div>
+
             </div>
         </div>
+    </div>
     </section>
 
     <section class="depositions" id="depoimentos">
