start to create deposition

--- a/index.html
+++ b/index.html
@@ -335,7 +335,35 @@
                 </div>
 
                 <div class="col-7">
-                    
+                    <span class="hint-title"><b>Depoimentos</b></span>
+                    <h1 class="title">
+                        <b>O que dizem sobre nós?</b>
+                    </h1>
+
+                    <div class="mb-5">
+
+                        <div class="deposition" id="deposition-1">
+                            <div class="conteiner-grade-deposition">
+                                <div class="img-deposition">
+                                    <div>
+                                        <p class="name-deposition">
+                                            Diego Pereira
+                                        </p>
+                                        <p class="note-deposition">
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star-half"></i>&nbsp; <span>4.5</span>
+                                        </p>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
             </div>
