add conteiner deposition text

--- a/index.html
+++ b/index.html
@@ -344,22 +344,30 @@
 
                         <div class="deposition" id="deposition-1">
                             <div class="conteiner-grade-deposition">
-                                <div class="img-deposition">
+                                <div class="img-deposition"></div>
                                     <div>
                                         <p class="name-deposition">
-                                            Diego Pereira
+                                            <b>
+                                                Diego Pereira
+                                            </b>
                                         </p>
                                         <p class="note-deposition">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half"></i>&nbsp; <span>4.5</span>
+                                            <i class="fas fa-star-half-alt"></i>&nbsp; <span>4.5</span>
                                         </p>
                                     </div>
-                                </div>
-
                             </div>
+
+                            <p class="text-depositions">
+                                <i class="fas fa-quote-left"></i>
+                                <span>
+                                    Muito bom, recomendo demais! Comida bem feita pelo chefe, atendimento dentro dos parâmetros e boa comunicação com o cliente.
+                                </span>
+                                <i class="fas fa-quote-right"></i>
+                            </p>
 
                         </div>
 
