--- a/index.html
+++ b/index.html
@@ -164,168 +164,168 @@
 
         <div class="background-menu">
         </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center mb-5">
-                        <span class="hint-title"><b>Cardápio</b></span>
-                        <h1 class="title">
-                            <b>
-                                Conhece o nosso cardápio
-                            </b>
-                        </h1>
-                    </div>
-
-                    <div class="col-12 container-menu">
-                        <a class="btn btn-white btn-sm mr-3">
-                            <i class="fas fa-hamburger"></i>&nbsp; Burguers
-                        </a>
-
-                        <a class="btn btn-white btn-sm mr-3">
-                            <i class="fas fa-pizza-slice"></i>&nbsp; Pizza
-                        </a>
-
-                        <a class="btn btn-white btn-sm mr-3">
-                            <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
-                        </a>
-
-                        <a class="btn btn-white btn-sm mr-3">
-                            <i class="fas fa-bacon"></i>&nbsp; Steakes
-                        </a>
-
-                        <a class="btn btn-white btn-sm mr-3">
-                            <i class="fas fa-cocktail"></i>&nbsp; Bebidas
-                        </a>
-
-                        <a class="btn btn-white btn-sm mr-3">
-                            <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
-                        </a>
-                    </div>
-
-                    <div class="col-12">
-                        <div class="row" id="menuItens">
-
-                            <div class="col-3 mb-5">
-                                <div class="card card-item">
-                                    <div class="img-product">
-                                        <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                            alt="">
-                                    </div>
-
-                                    <p class="title-product text-center mt-4">
-                                        <b>Nome</b>
-                                    </p>
-
-                                    <p class="price-product text-center">
-                                        <b>
-                                            R$ 154,90
-                                        </b>
-                                    </p>
-
-                                    <div class="add-buy">
-                                        <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                        <span class="add-number-itens">0</span>
-                                        <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                        <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-3 mb-5">
-                                <div class="card card-item">
-                                    <div class="img-product">
-                                        <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                            alt="">
-                                    </div>
-
-                                    <p class="title-product text-center mt-4">
-                                        <b>Nome</b>
-                                    </p>
-
-                                    <p class="price-product text-center">
-                                        <b>
-                                            R$ 154,90
-                                        </b>
-                                    </p>
-
-                                    <div class="add-buy">
-                                        <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                        <span class="add-number-itens">0</span>
-                                        <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                        <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-3 mb-5">
-                                <div class="card card-item">
-                                    <div class="img-product">
-                                        <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                            alt="">
-                                    </div>
-
-                                    <p class="title-product text-center mt-4">
-                                        <b>Nome</b>
-                                    </p>
-
-                                    <p class="price-product text-center">
-                                        <b>
-                                            R$ 154,90
-                                        </b>
-                                    </p>
-
-                                    <div class="add-buy">
-                                        <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                        <span class="add-number-itens">0</span>
-                                        <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                        <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-3 mb-5">
-                                <div class="card card-item">
-                                    <div class="img-product">
-                                        <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                            alt="">
-                                    </div>
-
-                                    <p class="title-product text-center mt-4">
-                                        <b>Nome</b>
-                                    </p>
-
-                                    <p class="price-product text-center">
-                                        <b>
-                                            R$ 154,90
-                                        </b>
-                                    </p>
-
-                                    <div class="add-buy">
-                                        <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                        <span class="add-number-itens">0</span>
-                                        <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                        <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="col-12 text-center">
-                        <a class="btn btn-white btn-sm">
-                            Ver mais
-                        </a>
-                    </div>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title"><b>Cardápio</b></span>
+                    <h1 class="title">
+                        <b>
+                            Conhece o nosso cardápio
+                        </b>
+                    </h1>
                 </div>
+
+                <div class="col-12 container-menu">
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-hamburger"></i>&nbsp; Burguers
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-pizza-slice"></i>&nbsp; Pizza
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-bacon"></i>&nbsp; Steakes
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-cocktail"></i>&nbsp; Bebidas
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3">
+                        <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
+                    </a>
+                </div>
+
+                <div class="col-12">
+                    <div class="row" id="menuItens">
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-product">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                                        alt="">
+                                </div>
+
+                                <p class="title-product text-center mt-4">
+                                    <b>Nome</b>
+                                </p>
+
+                                <p class="price-product text-center">
+                                    <b>
+                                        R$ 154,90
+                                    </b>
+                                </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-product">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                                        alt="">
+                                </div>
+
+                                <p class="title-product text-center mt-4">
+                                    <b>Nome</b>
+                                </p>
+
+                                <p class="price-product text-center">
+                                    <b>
+                                        R$ 154,90
+                                    </b>
+                                </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-product">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                                        alt="">
+                                </div>
+
+                                <p class="title-product text-center mt-4">
+                                    <b>Nome</b>
+                                </p>
+
+                                <p class="price-product text-center">
+                                    <b>
+                                        R$ 154,90
+                                    </b>
+                                </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-product">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                                        alt="">
+                                </div>
+
+                                <p class="title-product text-center mt-4">
+                                    <b>Nome</b>
+                                </p>
+
+                                <p class="price-product text-center">
+                                    <b>
+                                        R$ 154,90
+                                    </b>
+                                </p>
+
+                                <div class="add-buy">
+                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
+                                    <span class="add-number-itens">0</span>
+                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-12 text-center">
+                    <a class="btn btn-white btn-sm">
+                        Ver mais
+                    </a>
+                </div>
+
             </div>
+        </div>
         </div>
     </section>
 
     <section class="depositions" id="depoimentos">
         <div class="container">
             <div class="row">
-                
+
                 <div class="col-5 text-center">
                     <div class="card-depositions"></div>
                     <div class="d-flex img-banner">
@@ -344,23 +344,28 @@
 
                         <div class="deposition" id="deposition-1">
                             <div class="conteiner-grade-deposition">
-                                <div class="img-deposition">
-                                    <div>
-                                        <p class="name-deposition">
-                                            Diego Pereira
-                                        </p>
-                                        <p class="note-deposition">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half"></i>&nbsp; <span>4.5</span>
-                                        </p>
-                                    </div>
+                                <div class="img-deposition"></div>
+                                <div>
+                                    <p class="name-deposition">
+                                        Diego Pereira
+                                    </p>
+                                    <p class="note-deposition">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star-half"></i>&nbsp; <span>4.5</span>
+                                    </p>
                                 </div>
-
                             </div>
 
+                            <p class="text-deposition">
+                                <i class="fas fa-quote-left"></i>
+                                <span>
+                                    Muito bom, recomendo demais! comida muito bem feita pelo chefe, atendimento dentro dos parâmetros e boa comunicação com o cliente.
+                                </span>
+                                <i class="fas fa-quote-right"></i>
+                            </p>
                         </div>
 
                     </div>
