--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                     </div>
                             </div>
 
-                            <p class="text-depositions">
+                            <p class="text-deposition">
                                 <i class="fas fa-quote-left"></i>
                                 <span>
                                     Muito bom, recomendo demais! Comida bem feita pelo chefe, atendimento dentro dos parâmetros e boa comunicação com o cliente.
@@ -369,8 +369,69 @@
                                 <i class="fas fa-quote-right"></i>
                             </p>
 
->>>>>>> e697f44754b848352504fb2b76c833ac1ca104bf
                         </div>
+
+                    </div>
+
+
+                    <div class="deposition" id="deposition-2">
+                        <div class="conteiner-grade-deposition">
+                            <div class="img-deposition"></div>
+                                <div>
+                                    <p class="name-deposition">
+                                        <b>
+                                            Ana Beatriz
+                                        </b>
+                                    </p>
+                                    <p class="note-deposition">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>&nbsp; <span>5.0</span>
+                                    </p>
+                                </div>
+                        </div>
+
+                        <p class="text-deposition">
+                            <i class="fas fa-quote-left"></i>
+                            <span>
+                                Um jantar perfeito do começo ao fim. Comida, experiência, serviço ...
+                                foi maravilhoso que fomos dois dias seguidos.
+                            </span>
+                            <i class="fas fa-quote-right"></i>
+                        </p>
+
+                    </div>
+
+
+                    <div class="deposition" id="deposition-3">
+                        <div class="conteiner-grade-deposition">
+                            <div class="img-deposition"></div>
+                                <div>
+                                    <p class="name-deposition">
+                                        <b>
+                                            João Guilherme
+                                        </b>
+                                    </p>
+                                    <p class="note-deposition">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star"></i>&nbsp; <span>4.0</span>
+                                    </p>
+                                </div>
+                        </div>
+
+                        <p class="text-deposition">
+                            <i class="fas fa-quote-left"></i>
+                            <span>
+                                A comida estava excelente e o serviço gentil nos surpreendeu!
+                                Dica: reserve umas 3 horas antes para ter uma experiência incrível.
+                            </span>
+                            <i class="fas fa-quote-right"></i>
+                        </p>
 
                     </div>
 
