--- a/index.html
+++ b/index.html
@@ -446,8 +446,37 @@
         </div>
     </section>
 
-    <section class="reserve" id="reservas">
+    <section class="book" id="reservas">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card-secondary">
+                        <div class="row">
+                            <div class="col-7">
+                                <span class="hint-title"><b>Reserva</b></span>
+                                    <h1 class="title"><b>Quer reservar um horário?</b></h1>
+                                        <p class="pr-5">
+                                            Envie uma mensagem cliclando no botão abaixo
+                                            <br>
+                                            Reserve sua data e horário de forma simples e rápida.
+                                        </p>
+                                        <a class="btn btn-yellow mt-4">
+                                            Agendar reserva
+                                        </a>
+                            </div>
 
+                            <div class="col-5">
+                                <div class="card-book"></div>
+                                <div class="d-flex img-banner">
+                                    <img src="./img/icone-reserva.svg" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <footer>
