--- a/index.html
+++ b/index.html
@@ -454,15 +454,15 @@
                         <div class="row">
                             <div class="col-7">
                                 <span class="hint-title"><b>Reserva</b></span>
-                                    <h1 class="title"><b>Quer reservar um horário?</b></h1>
-                                        <p class="pr-5">
-                                            Envie uma mensagem cliclando no botão abaixo
-                                            <br>
-                                            Reserve sua data e horário de forma simples e rápida.
-                                        </p>
-                                        <a class="btn btn-yellow mt-4">
-                                            Agendar reserva
-                                        </a>
+                                <h1 class="title"><b>Quer reservar um horário?</b></h1>
+                                <p class="pr-5">
+                                    Envie uma mensagem cliclando no botão abaixo
+                                    <br>
+                                    Reserve sua data e horário de forma simples e rápida.
+                                </p>
+                                <a class="btn btn-yellow mt-4">
+                                    Agendar reserva
+                                </a>
                             </div>
 
                             <div class="col-5">
@@ -480,7 +480,25 @@
     </section>
 
     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <img src="img/logo.png" alt="" class="container-logo-footer">
+                </div>
 
+                <div class="col-6 container-text-footer">
+                    <p class="mb-0">
+                        <b>Menu On-line</b> &copy; Todos os direitos reservados
+                    </p>
+                </div>
+
+                <div class="col-3 container-social-footer">
+                    <a class="btn btn-sm btn-white btn-social mr-3"> <i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm btn-white btn-social mr-3"> <i class="fab fa-facebook"></i></a>
+                    <a class="btn btn-sm btn-white btn-social"> <i class="fab fa-whatsapp"></i></a>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
