start to shopping

--- a/index.html
+++ b/index.html
@@ -501,6 +501,34 @@
         </div>
     </footer>
 
+    <section class="modal-full m-0 p-0" id="modalShopping">
+
+        <div class="m-header">
+            <div class="container">
+                <a class="btn btn-white btn-sm float-right"> Fechar</a>
+
+                <div class="steps">
+                    <div class="steps step1 active">1</div>
+                    <div class="steps step2">2</div>
+                    <div class="steps step3">3</div>
+                </div>
+                <p class="title-shopping mt-4"> 
+                    <b id="lblTitleStep">Seu carrinho:</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="m-body">
+
+        </div>
+
+        <div class="m-footer">
+
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
