--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
         <div class="m-body">
             <div class="container">
-                <div id="itemShopping mr-0 ml-0">
+                <div id="itemShopping" class="row mr-0 ml-0 hidden">
                     <div class="col-12 item-shopping">
                         <div class="img-product">
                             <img src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
@@ -537,30 +537,11 @@
                     </div>
                 </div>
 
-                <div id="delivery mr-0 ml-0 hidden"></div>
-                <div id="resumeShop mr-0 ml-0 hidden"></div>
-            </div>
+                <div id="delivery mr-0 ml-0">
+                    <div class="col-4 ">
 
-            <div class="container">
-                <div id="itemShopping mr-0 ml-0">
-                    <div class="col-12 item-shopping">
-                        <div class="img-product">
-                            <img src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
-                        </div>
-                        <div class="data-products">
-                            <p class="title-product"><b>Nome produto</b></p>
-                            <p class="price-product"><b>R$ 149,90</b></p>
-                        </div>
-                        <div class="add-buy">
-                            <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                            <span class="add-number-itens">0</span>
-                            <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                            <span class="btn btn-remove"><i class="fa fa-times"></i></span>
-                        </div>
                     </div>
                 </div>
-
-                <div id="delivery mr-0 ml-0 hidden"></div>
                 <div id="resumeShop mr-0 ml-0 hidden"></div>
             </div>
 
